--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,7 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
     - name: Cache Cargo
@@ -22,9 +20,30 @@ jobs:
       with:
         path: ~/.cargo
         key: ${{ runner.os }}-cargo
+    - name: Check
+      run: cargo check
     - name: Build
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
     - name: Build release
       run: cargo build --release
+
+  lints:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - name: Cache Cargo
+      id: cache-cargo
+      uses: actions/cache@v4
+      with:
+        path: ~/.cargo
+        key: ${{ runner.os }}-cargo
+    - name: Formatting
+      run: cargo fmt --all --check
+    - name: Clippy
+      run: cargo clippy --workspace -- -D warnings
+    - name: Documentation
+      run: cargo doc --no-deps --workspace --document-private-items
+      env:
+        RUSTDOCFLAGS: -D warnings
